fixed on firefox

--- a/_sass/_user-card.scss
+++ b/_sass/_user-card.scss
@@ -1,6 +1,8 @@
 .perspective-fixed {
   perspective: 1000px;
   position: fixed;
+  left: calc(50vw - 200px);
+  top: calc(50vh - 250px);
 }
 .user-card {
   position: relative;
